--- a/mainapp/static/mainapp/css/audioFull.css
+++ b/mainapp/static/mainapp/css/audioFull.css
@@ -41,8 +41,8 @@
 
 #mainLogo {
     top: -50%;
-    width: 45%;
-    height: 45%;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
 	box-shadow: 0px 4px 28px rgba(0, 0, 0, .5)/*#64bdf5;*/;
     right: 0;
@@ -51,12 +51,13 @@
     margin: auto;
 	position: absolute;
 	visibility:visible;
-	z-index:15;
+    z-index:15;
+    
 }
 #mainLogo:hover {
-	width: 47%;
-	height: 47%;
-	box-shadow: 1px 5px 28px #C732B1;
+	width: 255px;
+	height: 255px;
+	box-shadow: 0px 0px 30px #C732B1;
 }
 
 #logo {
@@ -75,30 +76,76 @@
     z-index:5;
     position: absolute;
     opacity: 0.3;
+    display: none;
 }
 
 #nextlogo {
 	top: -50%;
     right: -100%;
 	opacity: 0.6;
-	width: 25%;
-    height: 25%;
+	width: 150px;
+    height: 150px;
 }
 
-#maintoprevlogo {
+.main-to-prev-logo {
 	top: -50%;
-	width: 40%;
-	height: 40%;
-	z-index:0;
-    visibility: hidden;
+    z-index:0;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    position: absolute;
+}
+
+.next-to-main-logo {
+	top: -50%;
+    z-index:0;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    right: -100%;
+    bottom: 0;
+    left: 0;
+    opacity: 1.0;
+    margin: auto;
+    position: absolute;
+}
+
+.prev-envelope {
+	top: -90%;
+    left: -100%;
+	opacity: 0.0;
+	width: 150px;
+    height: 150px;
+    z-index: 20;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    position: absolute;
+}
+
+.next-envelope {
+	top: -50%;
+    right: -100%;
+	opacity: 0.6;
+	width: 150px;
+    height: 150px;
+    z-index: 20;
+    left: 0;
+    bottom: 0;
+    margin: auto;
+    position: absolute;
 }
 
 #prevlogo {
 	top: -50%;
     left: -100%;
 	opacity: 0.6;
-	width: 25%;
-	height: 25%;
+	width: 150px;
+	height: 150px;
 }
 
 #nextButton {
@@ -151,8 +198,8 @@
 #like {
     z-index: 5;
     opacity: 0.8;
-    width: 128px;
-    height: 128px;
+    width: 90px;
+    height: 90px;
 }
 
 #menu {
@@ -206,7 +253,7 @@
 
 #fullVolume {
     top: 80%;
-    height: 32px;
+    height: 12px;
     width: 180px;
     right: 0;
     bottom: 0;
@@ -215,19 +262,20 @@
 	position: absolute;
 }
 
-#trackLength {
+.track-length {
     font: 14px Arial,Helvetica,sans-serif;
 	color: black;
 	text-align: right;
-	right: 10px;
+	right: -20px;
 	margin: auto;
-	position: absolute;
-	bottom: 15px;
-	height: 100%;
-	z-index: 20;
+    position: absolute;
+    top: 30px;
+    z-index: 20;
+    height: 20px;
+    line-height: 20px;
 }
 
-#playedTime {
+/*.played-time {
     font: 14px Arial,Helvetica,sans-serif;
 	color: black;
 	text-align: left;
@@ -237,7 +285,7 @@
 	height: 100%;
 	z-index: 20;
 	bottom: 15px;
-}
+}*/
 
 #ball {
     left: 110px;
@@ -291,4 +339,14 @@
     bottom: 69px;
     margin: auto;
     position: absolute;
+}
+
+.vue-simple-progress {
+    top: 80%;
+    margin: auto;
+    position: absolute;
+    width: 90%;
+    height: 70px;
+    left: 0;
+    right: 0;
 }
