--- a/mainapp/templates/mainapp/vue-slider-component/template.html
+++ b/mainapp/templates/mainapp/vue-slider-component/template.html
@@ -4,10 +4,10 @@
 <script type="text/x-template" id="vueSliderComponent">
     <div 
 ref="wrap" 
-:class="['vue-slider-component', flowDirection, disabledClass, stateClass, { 'vue-slider-has-label': piecewiseLabel }]" 
+:class="['vue-slider-component', myCSS, flowDirection, disabledClass, stateClass, { 'vue-slider-has-label': piecewiseLabel }]" 
 v-show="show" 
 :style="wrapStyles"
-@click="wrapClick"
+@mousedown="wrapClick"
 >
 <div ref="elem" aria-hidden="true" class="vue-slider" :style="[elemStyles, bgStyle]">
   <template v-if="isRange">
