--- a/mainapp/static/mainapp/css/loader-music.css
+++ b/mainapp/static/mainapp/css/loader-music.css
@@ -1,50 +1,370 @@
 body, html
 {
-    height: 100%;
     width: 100%;
-    margin: 0;
+    margin: auto;
     padding: 0;
-    font-family: Arial,Helvetica,sans-serif;
+	font-family: Arial,Helvetica,sans-serif;
+	background-color: rgba(70, 70, 70, 0.1);
+	font-size: 125%;
 }
-.loader-conteiner
+.pointerEvents
 {
-	background-color: rgb(85, 85, 85);
-	height: 600px;
-	max-width: 800px;
-	margin: 100px auto 0 auto ;
+	pointer-events: none
 }
+*:focus {outline: none;}
+
 input
 {
-	color: white;
-	height: 25px;;
+	font-size: 90%;
+	padding-left:5px; 
+	height: 30px;
 	width: 500px;
-	border-color:rgb(1,1,1);
-	border-width:2px; 
-	background-color: rgb(70, 70, 70);
+	border-style: solid;
+	border-color:rgb(153, 153, 153);
+	background-color: rgba(179, 179, 179,0.3);
 }
-.track-name-loader-conteiner, .track-janr-loader-conteiner, .description-conteiner, .add
+textarea
 {
-	padding-bottom:15px; 
+	z-index: 80;
+	font-family: Arial,Helvetica,sans-serif;
+	background-color: rgba(179, 179, 179,0.3);
+	border-style: solid;
+	border-width:2px; 
+	border-color:rgb(153, 153, 153);
+	font-size: 100%;
+	resize: vertical;
+	height: 30px;
+	width: 755px;
+	max-height: 250px;
+	min-height: 30px;
+}
+
+.loader-conteiner
+{
+
+	display:block;
+	position: relative;
+	background-color: rgba(255, 255, 255, 0.8);
+	height: auto;
+	max-width: 800px;
+	padding-bottom: 155px;
+	margin: 100px auto  ;
+}
+
+/*шапка*/
+.header
+{
+	line-height: 40px;
+	padding: 8.5px 13.5px;
+	position: relative;
+	height: 40px;
+	font-size: 25px;
+	color: rgb(250, 250, 250);
+	background-color: rgb(70, 70, 70);
+	margin-bottom: 17px;
+}
+.esc
+{
+	cursor: pointer;
+	display: block;
+	padding-top: 7.5px; 
+	float: right;
+	width: 25px;
+	height: 25px;
+}
+
+/*обложка*/
+.track-img-loader-conteiner
+{
+	margin: 0 20px 20px 20px;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-end;
-	left: 280px;
-	position: relative;
-}
-.track-img-loader
-{
 	position: absolute;
+}
+.camera
+{
+	padding: 0;
+	object-fit: scale-down;
 	display: block;
-	margin: 20px 20px 20px 20px;
-	float: left;
     border-style: solid;
     border-color:black;
-    border-width: 5px;
-    width: 240px;
-    height: 240px;
+    width: 220px;
+    height: 220px;
 }
-.track-img-loader:hover
+.img
+{
+	padding: 0;
+	object-fit: cover;
+	display: block;
+    border-style: solid;
+    border-color:black;
+    width: 220px;
+    height: 220px;
+}
+.camera:hover, .img:hover
 {
 	cursor: pointer;
 	filter: opacity(50%);
+}
+/*жанр*/
+.janr
+{
+	cursor: pointer;
+	text-align:center;
+	height: 30px;
+	width: 170px;
+	padding: 0 25px;
+	border-color:rgb(153, 153, 153);
+	background-color: rgba(179, 179, 179,0.3);
+	border-style: solid;
+	border-width:2px; 
+}
+.janr:active
+{
+	background-color: rgba(179, 179, 179,0.8);
+}
+li
+{
+	list-style-type: none;
+}
+
+.janr-drop
+{
+
+	height: 90px;
+	z-index: 90;
+	width: 224px;
+	position: absolute;
+	top: 61.5px;
+	padding: 0;
+	margin: 0;
+
+}
+.janr-drop li
+{
+	background-color: rgb(179, 179, 179);
+	border-color:rgb(153, 153, 153);
+	border-style: solid;
+	border-width:2px; 
+	transition: .4s;
+	cursor: pointer;
+	border-top:none;
+	text-align: center;
+	width: 220px;
+	height: 30px;
+}
+.janr-drop li:hover{
+background-color: rgb(129, 129, 129);
+}
+
+.janr-drop-menu
+{
+	overflow-y: auto;
+ 	overflow-x: hidden !important;
+	height: 64px;
+	top: -1.3px;
+	position: absolute;
+	left: 224px;
+	padding: 0;
+	margin: 0;
+	border-bottom: 2px solid rgb(153, 153, 153);
+	border-top: 2px solid rgb(153, 153, 153);
+}
+.janr-drop-menu li
+{
+	border-left: none;
+	border-bottom: 2px solid rgb(153, 153, 153);
+	border-top: none;
+	cursor: pointer;
+	text-align: center;
+	width: 226px;
+	height: 30px;
+}
+.janr-drop-menu li:last-child
+{
+	border-bottom: none;
+}
+
+.track-name-loader-conteiner, .track-janr-loader-conteiner, .add, .loader
+{
+	width: 520px;
+	margin: 0 22px;
+	padding-bottom:45px; 
+	display: flex;
+	flex-direction: column;
+	position: relative;
+}
+.description-conteiner, .add, .loader, .loader-tracks
+{
+	margin: 0 22px;
+	position: relative;
+	top: 165px;
+
+}
+.track-name-loader-conteiner, .track-janr-loader-conteiner
+{
+	left: 250px;
+}
+.track-janr-loader-conteiner
+{
+	position: absolute
+}
+label::last-letter
+{
+
+}
+
+.loader-tracks
+{
+	display: block;
+	line-height: 40px;
+	width: 760px;
+	height: 40px;
+	position: relative;
+	margin: 0px 20px 20px;
+}
+.play
+{
+	position: absolute;
+	display: block;
+	width: 40px;
+	height: 40px;
+}
+.track
+{
+	display: block;
+	left: 65px;
+	position: absolute;
+	height: 35px;
+	width: 625px;
+}
+.edit
+{
+	cursor: pointer;
+	overflow: visible;
+	left: 669px;
+	top:7.5px;
+	position: absolute;
+	display: block;
+	width: 25px;
+	height: 25px;
+}
+
+.del
+{
+	cursor: pointer;
+	left: 720px;
+	position: absolute;
+	float: right;
+	display: block;
+	width: 40px;
+	height: 40px;
+}
+hr
+{
+	position: relative;
+	top:47px;
+	overflow: visible;
+	border: 0;
+	height: 1px;
+	background-color: #000;
+	background-image: -webkit-linear-gradient(left, #fff, #000, #fff);
+}
+.error
+{
+	z-index: 80;
+	display: block;
+	margin-bottom: -25px;
+	overflow: hidden;
+	padding: 0;
+	width: 350px;
+	height: 30px;
+	margin: 0;
+	left:370px;
+	bottom: -130px; 
+	position: relative;
+	color: red;
+}
+.loader
+{
+	color: #fff;
+	font-size: 100%;
+	margin-top: 15px; 
+	cursor: pointer;
+	background-color: rgba(0, 153, 38,0.5);
+	border: none;
+	width: 50%;
+	height: 40px;
+	padding-left: 140px;
+	position: relative;
+	line-height: 40px;
+	text-align: center;
+}
+.loader:hover{
+	background-color:  rgba(0, 230, 57,0.5)
+}
+
+/*кнопка загрузки*/
+.track-upload
+{
+	transition-duration: .4s;
+	position: relative; /* Даем возможность делать позиционирование, внутри данного элемента */
+	overflow: hidden; /* Все что выходит за пределы - скрываем */
+	width: 40%; /* Задаем ширину кнопки выбора файла */
+	height: 25px; /* Задаем высоту кнопки выбора файла */
+	background: rgb(89, 89, 89);
+	padding: 8px 4px;
+	color: #fff;
+	line-height: 36px;
+	text-align: center;
+}
+.track-upload:hover 
+{
+	background: rgb(128, 128, 128);
+}
+.track-upload label, .track-upload-drop label, .track-upload-drop2 label
+{
+	/* Растягиваем label на всю возможную площадь блока .file-upload */
+	content: "Добавить музыку";
+	border: none;
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
+}
+/*кнопка загрузки дроп*/
+.track-upload-drop
+{
+	z-index: 90;
+	transition-duration: .4s;
+	border-style:  dashed;
+	border-color:  rgb(153, 153, 153);
+	position: relative; /* Даем возможность делать позиционирование, внутри данного элемента */
+	width: 93.2%; /* Задаем ширину кнопки выбора файла */
+	height: 80px; /* Задаем высоту кнопки выбора файла */
+	line-height: 96px;
+	overflow: hidden;
+	background:rgb(242, 255, 255);
+	padding: 8px 4px;
+	color: rgb(0, 0, 0);
+	text-align: center;
+}
+/*кнопка загрузки дроп2*/
+.track-upload-drop2
+{
+	z-index: 90;
+	border-style:  dashed;
+	border-color:  rgb(0, 92, 230);
+	position: relative; /* Даем возможность делать позиционирование, внутри данного элемента */
+	width: 93.2%; /* Задаем ширину кнопки выбора файла */
+	height: 80px; /* Задаем высоту кнопки выбора файла */
+	line-height: 96px;
+	overflow: hidden;
+	background: rgb(242, 255, 255);
+	padding: 8px 4px;
+	color: rgb(0, 0, 0);
+	text-align: center;
 }
