--- a/mainapp/static/mainapp/css/loader-music.css
+++ b/mainapp/static/mainapp/css/loader-music.css
@@ -1,12 +1,4 @@
-body, html
-{
-    width: 100%;
-    margin: auto;
-    padding: 0;
-	font-family: Arial,Helvetica,sans-serif;
-	background-color: rgba(70, 70, 70, 0.1);
-	font-size: 125%;
-}
+
 .pointerEvents
 {
 	pointer-events: none
@@ -42,17 +34,19 @@ textarea
 .loader-conteiner
 {
 
+	font-size: 160%;
 	display:block;
 	position: relative;
 	background-color: rgba(255, 255, 255, 0.8);
 	height: auto;
 	max-width: 800px;
-	padding-bottom: 155px;
+	padding-bottom: 185px;
 	margin: 100px auto  ;
+	margin-bottom: 0;
 }
 
 /*шапка*/
-.header
+.Loaderheader
 {
 	line-height: 40px;
 	padding: 8.5px 13.5px;
@@ -91,8 +85,9 @@ textarea
     width: 220px;
     height: 220px;
 }
-.img
+.Loaderimg
 {
+	cursor: pointer;
 	padding: 0;
 	object-fit: cover;
 	display: block;
@@ -107,7 +102,7 @@ textarea
 	filter: opacity(50%);
 }
 /*жанр*/
-.janr
+.Loaderjanr
 {
 	cursor: pointer;
 	text-align:center;
@@ -119,15 +114,14 @@ textarea
 	border-style: solid;
 	border-width:2px; 
 }
-.janr:active
+.Loaderjanr:active
 {
 	background-color: rgba(179, 179, 179,0.8);
 }
-li
+.track-janr-loader-conteiner li
 {
 	list-style-type: none;
 }
-
 .janr-drop
 {
 
@@ -209,10 +203,7 @@ background-color: rgb(129, 129, 129);
 {
 	position: absolute
 }
-label::last-letter
-{
 
-}
 
 .loader-tracks
 {
@@ -223,7 +214,7 @@ label::last-letter
 	position: relative;
 	margin: 0px 20px 20px;
 }
-.play
+.Loaderplay
 {
 	position: absolute;
 	display: block;
@@ -279,7 +270,6 @@ hr
 	padding: 0;
 	width: 350px;
 	height: 30px;
-	margin: 0;
 	left:370px;
 	bottom: -130px; 
 	position: relative;
