--- a/mainapp/static/mainapp/css/main.css
+++ b/mainapp/static/mainapp/css/main.css
@@ -1,6 +1,7 @@
 
 html, body
 {
+
     /*font-family:"Rex Bold";*/
     height: 100%;
     width: 100%;
@@ -8,6 +9,36 @@ html, body
     padding: 0;
     font-family: Arial,Helvetica,sans-serif;
 }
+/*опастно*/
+.uploadButton
+{
+    pointer-events: all;
+    height: 40px;
+    width: 40px;
+}
+ .modal
+ {
+ 
+    pointer-events: all;
+    position: fixed;
+    z-index: 90000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+    overflow: -moz-scrollbars-none; 
+    -ms-overflow-style: none; 
+ }
+ .modal-content
+ {
+    margin: 0 auto;
+ }
+.modal::-webkit-scrollbar {
+    display: none;
+}
+ /*безопастно*/
 .convert
 {
     max-width: 1143px;
@@ -308,6 +339,8 @@ html, body
 
 .cover
 {
+    
+    border: none;
     image-rendering: -webkit-crisp-edges;
     backface-visibility: hidden;
     transition: 1.4s transform;
@@ -330,7 +363,7 @@ html, body
     top: 0.8%; right: 0; bottom: 0; left: 0;
     display: block;
     height: auto;
-    width: 80%; 
+    width: 76%; 
     padding: 0;
 
 }
@@ -344,11 +377,9 @@ html, body
     -moz-transform: translateX(-13.5%) rotate(45deg);
     -webkit-transform: translateX(-13.5%) rotate(45deg);
     display: block;
-    z-index: 40;
 }
 .cover:hover~span
 {
-
     transition-duration: .7s;
     transform: /*scale(1.05)*/ translateX(8.3%) /*translateY(5px)*/;
 }
@@ -381,9 +412,11 @@ html, body
 }
 .cover:hover 
 {
-    /*image-rendering: optimizeSpeed;*/
+    image-rendering:  auto;
     z-index: 60;
     padding:0;
+    filter:sepia(50%);
+    height: auto;
     top: 0; right: 0; bottom: 0; left: 0;
     -o-transform: translateX(8.3%);
     -ms-transform: translateX(8.3%);
@@ -392,8 +425,8 @@ html, body
     transform: /*scale(1.05)*/ translateX(8.3%);
     transition-duration: .7s;
     cursor: pointer;
-    -webkit-filter: sepia(50%);
-    /*filter: sepia(50%);
+    /*-webkit-filter: invert(100%)*/
+
     /*box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);*/ 
 }
 /*подвал*/
