--- a/mainapp/templates/mainapp/loader-music.html
+++ b/mainapp/templates/mainapp/loader-music.html
@@ -4,9 +4,9 @@
 <script type="text/x-template" id="loader">
     <div id="loader-conteiner" class="loader-conteiner">
         <link rel="stylesheet" href="{% static 'mainapp/css/loader-music.css' %}" type="text/css">
-        <header class="header">
+        <header class="Loaderheader">
             <span>Загрузка музыки</span>
-            <img class="esc" src="/static/mainapp/images/whiteClose.png">
+            <img class="esc" src="/static/mainapp/images/whiteClose.png" @click="close">
         </header>
         <form method="POST">
             <div class="track-img-loader-conteiner" >
@@ -20,8 +20,8 @@
     
             <div class="track-janr-loader-conteiner">
                 <label for="track-janr-loader">Жанр издания*:</label>
-                <div class="janr" @click="show=!show">{{ '{{' }} janr }}</div>
-                <ul class="janr-drop" v-if="show"  id="dropdown">
+                <div class="Loaderjanr" @click="show=!show">{{ '{{' }} janr }}</div>
+                <ul class="janr-drop" v-if="show">
                     <li v-for="(item,index) in menuItems"  @click='menuIndexfunc(index)'>{{ '{{' }} item.name }}
                         <ul class="janr-drop-menu" v-if="menuIndex==index">
                             <li v-for="child in item.children" @click="chooseJanr(child.name)"> {{ '{{' }} child.name }}
@@ -39,7 +39,7 @@
     
             <input style="display: none" id="photo" ref="fileInput" class="add" @change="sync_photo" type="file" name="photo" accept="image/*,image/jpeg" > <!--если шо тот ref -->
             <div  class="loader-tracks" v-for="(tracks, index) in track" >
-                <img class="play" src="/static/mainapp/images/playButton.png" alt="play">
+                <img class="Loaderplay" src="/static/mainapp/images/playButton.png" alt="play">
                 <input v-focus v-on:keyup.enter="currentEdit=null" v-if="currentEdit===index" id="input" class="track" type="text" v-model='tracks.name' @change="track_Name" @blur="currentEdit=null" maxlength="30" > <!-- а тут менять длину по базе-->
                 <div v-else class="track" style="cursor: pointer"  @click="upgradeName(index)" >{{'{{'}}tracks.name}}</div>
                 <img v-if="currentEdit===index" class="edit" src="/static/mainapp/images/forward.png" @mousedown="currentEdit=null">
@@ -54,10 +54,10 @@
                     Добавить композицию
                 </label>
             </div>
-    
+            <div id="error" class="error"><label  >{{'{{'}}errorMessage}} </label></div>
             <button v-if='this.track.length > 0 & track_name_loader != "" & janr != "жанр" '  class="loader" name="loader" @click.prevent='send()'>Загрузить </button>
             
-            <div id="error" class="error"><label  >{{'{{'}}errorMessage}} </label></div>
+
         </form>
         </div>
 </script>
