--- a/mainapp/templates/mainapp/homePage.html
+++ b/mainapp/templates/mainapp/homePage.html
@@ -26,6 +26,7 @@
             <div class="management">
                     {% if username %}
                     <img class="uploadButton" src="/static/mainapp/images/upload-button.png" alt="loader" @click='show'>
+                    <a href="profile/">Настройки</a>
                     <!--<a href="loader-music/">Добавить</a>-->
                     <!--<a href="performers/">Моя музыка</a>-->
                     <a href="auth/logout/">Выйти ({{ username }})</a>
