--- a/mainapp/templates/mainapp/ProfileNastr.html
+++ b/mainapp/templates/mainapp/ProfileNastr.html
@@ -1,36 +1,73 @@
-
+{% block content %}
 {% load staticfiles %}
 
 <script type="text/x-template" id="nastr">
-<div class="nastr-conteiner">
-<link rel="stylesheet" href="{% static 'mainapp/css/nastr.css' %}" type="text/css">
-<div class="row">
-<form method="POST">
-<div class="mainNastr block">
-    <label>Настройки</label>
-    <hr>
-
-
-</div>
-
-
-
-
-</div>
-</form>
-</div>
+    <div class="nastr-conteiner">
+        <link rel="stylesheet" href="{% static 'mainapp/css/nastr.css' %}" type="text/css"/>
+            <div class="row">
+                <div class="mainNastr block">
+                    <label>Настройки</label>
+                    <hr>
+                    <div class="N-name str">
+                        <label class="line">Ваше имя:</label>
+                        <input class="" type="text" name="N-name" maxlength="40"/>
+                    </div>
+                    <div class="N-Lable str">
+                        <label class="line">Аватар:</label>
+                        <input type="file" name="lable" multiple accept="image/*" />
+                    </div> 
+                    <div class="N-Description row">
+                        <label class="line">О себе:</label>
+                        <textarea class="" type="text" name="N-Description" maxlength="800">
+                        </textarea>
+                    </div>              
+                </div>
+        
+                <div class="N-vk block row">
+                    <label class="line">Привязка акканута к ВК:</label>
+                    ну а тут можно просто ссылку требовать в инпут 
+                </div>
+        
+                <div class="N-style block row">
+                    <label>Вид страницы</label>
+                    <hr>
+                    <div class="str">
+                        <label class="line">Фон профиля:</label>
+                        <input type="file" name="background" multiple accept="image/*" />
+                    </div>
+                    <div class="str">
+                        <label class="line">Цвет фона:</label>
+                        <input type="color"/>
+                    </div>
+                    <div class="str">
+                        <label class="line">Любимый альбом:</label>
+                        поиск по всем альбомам
+                    </div>
+                </div>
+        
+                <div class="N-subbmit block row">
+                    <div class="str" >
+                        <button class="N-sub" name="sub"> Сохранить </button>
+                        <div class="Cancel">Отмена</div>
+                    </div>
+                </div>
+                        
+                        
+                        
+                        
+            </div>
+    </div>
 </script>
 
 
 <script type="text/x-template" id="profile">
-
-<div class="ProfileConteiner" id="body">
+    <div class="ProfileConteiner" id="body">
         <div class="row">
             <div class="leftColumn">
             <div class="ProfileLable Lblock" >
-                <img src="/static/mainapp/images/camera.png" alt="аватарка" class="ProfileImg">
-                <div class="ProfileNastr">
-                    <img src="/static/mainapp/images/settings-cogwheel-button.png" alt="настройки">
+                <img src="/static/mainapp/images/camera.png" alt="аватарка" class="ProfileImg" />
+                <div class="ProfileNastr" @click="nastrClick">
+                    <img src="/static/mainapp/images/settings-cogwheel-button.png" alt="настройки"/>
                     <label>Настройки</label>
                 </div>
             </div>
@@ -66,4 +103,4 @@
 
 
 <script src="{% static 'mainapp/js/profile.js' %}"></script>
-
+{% endblock %}
