--- a/mainapp/templates/mainapp/homePage.html
+++ b/mainapp/templates/mainapp/homePage.html
@@ -15,26 +15,39 @@
     <script src="{% static 'mainapp/js/init.js' %}"></script>
 </head>
 
-<body  id="body">
+<body   id="body">
     {% csrf_token %}
     <div id="VueContainer">
+
+        <div  class="header-conteiner">
         <div class="header" >
-            <header class="name">
+            <div class="row">
+            <div class="name">
                 BoysBand
-            </header>
-            <div class="radio"></div>
+            </div>
             <div class="management">
                     {% if username %}
-                    <img class="uploadButton" src="/static/mainapp/images/upload-button.png" alt="loader" @click='show'>
-                    <a href="profile/">Настройки</a>
+                    
+                    <div class="drop-menu row" @mouseenter="menuShow=!menuShow" @mouseleave="menuShow=!menuShow" >
+                        <span>{{ username }}</span>
+                        <img title="загрузить"  class="user" src="/static/mainapp/images/user.svg" alt="user">
+                        <ul class="menu-drop" v-if="menuShow">
+                            <li><a href="profile/">Настройки</a></li>
+                            <li><a href="auth/logout/">Выйти</a></li>
+                        </ul>
+                    </div>
+                  
+                    <img class="uploadButton" src="/static/mainapp/images/download.svg" alt="loader" @click='show'>
                     <!--<a href="loader-music/">Добавить</a>-->
                     <!--<a href="performers/">Моя музыка</a>-->
-                    <a href="auth/logout/">Выйти ({{ username }})</a>
+                    
                     {% else %}
                     <a href="auth/login/">Авторизация</a>
                     <a href="auth/register">Регистрация</a>
                     {% endif %}
             </div>
+        </div>
+        </div>
         </div>
         <div v-show="showModel" class="modal" id="myModal" >
             <div class="modal-content" >
